<resources>
    <string name="app_name">FnF</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">FnF</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_online_list">Online List</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in FnF now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">LogOut</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_defualt_status">Hello! Chat with me Maybe</string>
    <string name="status_txt">Your Status Here!</string>
    <string name="user_email">Email</string>
    <string name="account_settings">Settings</string>
    <string name="Message">Type a message</string>
    <string name="enter_message">Enter Message...</string>
    <string name="title_activity_tracking">Map</string>
    <string name="about">About</string>
    <string name="invite">Invite Friends</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_and_about">Status and About</string>
    <string name="friends_total">Total Friends</string>
    <string name="title_activity_reminder_maps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_title">About</string>
    <string name="about_msg">Friends n Family application that helps you track or chat with your beloved ones.</string>
    <string name="create_reminder">Create Reminder</string>

</resources>
