<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerParent"
    android:background="@drawable/login_background"
    tools:context="org.lanaeus.fnfv3.RegisterActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/reg_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/reg_app_bar">


        <ImageView
            android:id="@+id/reg_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="10dp"
            android:hint="Display Name"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/reg_password"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>
