<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.lanaeus.fnfv3.ProfileActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pro_appBarLayout">
        <include layout="@layout/app_bar_layout" android:id="@+id/pro_app_bar"></include>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pro_appBarLayout">


        <ImageView
            android:id="@+id/pro_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/female"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/pro_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pro_image"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:text="Display Name"
            android:textSize="25dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@color/black" />/>

        <LinearLayout
            android:id="@+id/pro_about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pro_name_txt"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_and_about"
                android:layout_marginTop="5dp"
                android:paddingStart="20dp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/pro_status_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/user_defualt_status"
                android:textColor="@color/black"
                android:background="@drawable/border_layout"/>

            <TextView
                android:id="@+id/pro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_layout"/>
            <TextView
                android:id="@+id/pro_totalfriends_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/friends_total"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_layout"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/pro_about_layout"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/pro_add_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Add Friend" />

            <Button
                android:id="@+id/pro_del_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Delete" />

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
