<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context="org.lanaeus.fnfv3.ProfileSettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_settings_appBarLayout">
        <include layout="@layout/app_bar_layout" android:id="@+id/account_settings_app_bar"></include>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_settings_appBarLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/acc_settings_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/female" />

        <ImageButton
            android:id="@+id/btn_chng_image"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/acc_settings_image"
            android:layout_alignEnd="@+id/acc_settings_image"
            android:layout_marginEnd="9dp"
            android:background="@drawable/circular_button"
            app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/acc_settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_layout"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="Display Name"
        android:textSize="25dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/acc_settings_name"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_and_about"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/acc_settings_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/user_defualt_status"
        android:textColor="@color/black"
        android:background="@drawable/border_layout"/>

        <TextView
            android:id="@+id/acc_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_layout"/>

    </LinearLayout>
</RelativeLayout>

