<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.lanaeus.fnfv3.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_appBarLayout">
        <include layout="@layout/app_bar_layout" android:id="@+id/settings_app_bar"></include>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_appBarLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:background="@drawable/border_layout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_pro_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:padding="5dp"
            app:srcCompat="@drawable/female" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:padding="5dp"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_invite"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/settings_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_layout"
        android:drawableLeft="@drawable/ic_invite_black_24dp"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/invite"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_invite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_layout"
        android:drawableLeft="@drawable/ic_help_black_24dp"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/about"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/btn_about"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_layout"
        android:drawableLeft="@drawable/ic_logout_black_24dp"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/sign_out"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>
